--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daiane Carvalho</title>
     <link rel="icon" href="img/LogoPNG.png" type="image/x-icon">
     <link rel="stylesheet" href="/style/style.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <nav>
-        <a class="logo" > <img src="img/LogoPNG.png" height="71"></a>
-        <div class="mobile-menu">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-        <ul class="nav-list">
-          <li><a href="#">Início</a></li>
-          <li><a href="#">Sobre Mim</a></li>
-          <li><a href="#">Login</a></li>
-        </ul>
-      </nav>
+        <nav>
+            <a class="logo"> <img src="img/LogoPNG.png" height="71"></a>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <ul class="nav-list">
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre Mim</a></li>
+                <li><a href="#">Serviços</a></li>
+            </ul>
+            <div class="login-button">
+                <button><a href="#"></a>Entrar</button>
+            </div>
+        </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="mainSection">
+
+
+
+
+        </section>
+
+        <section class="sectionSobre">
+
+        </section>
+    </main>
     <script src="mobile-navbar.js"></script>
-  </body>
+</body>
+
 </html>
