--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daiane Carvalho</title>
     <link rel="icon" href="img/LogoPNG.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
 </head>
 
 <body>
