--- a/calendario.html
+++ b/calendario.html
@@ -56,7 +56,7 @@
         </div>
         <div class="add-event-body">
           <div class="add-event-input">
-            <input type="text" placeholder="Event Name" class="event-name" />
+            <input type="text" placeholder="Nome da Consulta" class="event-name" />
           </div>
           <div class="add-event-input">
             <input type="text" placeholder="Event Time From" class="event-time-from" />
