--- a/index.html
+++ b/index.html
@@ -8,39 +8,79 @@
     <title>Daiane Carvalho</title>
     <link rel="icon" href="img/LogoPNG.png" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css" />
+    <!-- BOOTSTRAP ICONS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a class="logo"> <img src="img/LogoPNG.png" height="71"></a>
-            <div class="mobile-menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-            <ul class="nav-list">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Serviços</a></li>
-            </ul>
-            <div class="login-button">
-                <button><a href="#"></a>Entrar</button>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section class="mainSection">
 
+    <div class="container">
+        <header>
+            <nav>
+                <a class="logo"> <img src="img/LogoPNG.png" height="71"></a>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+                <ul class="nav-list">
+                    <li><a href="#topoDoSite">Início</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Sobre Mim</a></li>
+                </ul>
+                <div class="login-button">
+                    <button><a href="#"></a>Entrar</button>
+                </div>
+            </nav>
+        </header>
+        <main>
 
-
-
-        </section>
-
-        <section class="sectionSobre">
-
-        </section>
-    </main>
+            <section id="topoDoSite">
+                <div class="interface">
+                    <div class="flex">
+                        <div class="txtTopoSite">
+                            <h1>REALÇANDO SUA BELEZA NATURAL COM CUIDADO E CONFIANÇA<span>.</span>
+                            </h1>
+                            <p>Acreditamos que cada pessoa possui uma beleza única e especial. Nosso objetivo é realçar
+                                essa beleza natural através de tratamentos personalizados e de alta qualidade,
+                                realizados com cuidado, profissionalismo e atenção aos detalhes.</p>
+                        </div>
+                        <div class="imgTopoSite">
+                            <img src="img/LogoPNG.png" height="300">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="especialidades">
+                <div class="interface">
+                    <h2>MEUS SERVIÇOS</h2>
+                    <div class="flex">
+                        <div class="especialidadesBox">
+                            <i class="bi bi-clipboard-heart-fill"></i>
+                            <h3>Tratamentos Faciais</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam, saepe
+                                repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
+                        </div>
+                    <div class="flex">
+                        <div class="especialidadesBox">
+                            <i class="bi bi-clipboard-heart-fill"></i>
+                            <h3>Tratamentos Faciais</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam, saepe
+                                repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
+                        </div>
+                    <div class="flex">
+                        <div class="especialidadesBox">
+                            <i class="bi bi-clipboard-heart-fill"></i>
+                            <h3>Tratamentos Faciais</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam, saepe
+                                repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
     <script src="mobile-navbar.js"></script>
 </body>
 
