pablo e amigos login
capitão e sua

--- a/login.html
+++ b/login.html
@@ -38,9 +38,12 @@
                     <input type="password">
                     <a href="https://support.google.com/accounts/answer/7682439?hl=pt-BR">Esqueci a senha</a>
                 </div>
-                        <button class="botao_acao">
-                            <submit onclick="Logarconta()">Entrar</submit>
-                        </button>    
+
+                <div class="centralizar_botao">
+                    <button class="botao_acao">
+                        <submit onclick="Logarconta()">Entrar</submit>
+                    </button>    
+                </div>
             </form>
         </div>
     </main>
