--- a/login.html
+++ b/login.html
@@ -44,7 +44,13 @@
                         <submit onclick="Logarconta()">Entrar</submit>
                     </button>    
                 </div>
+        
+                <div class="criar_conta">
+                <a href="cadastro.html">Criar conta </a>
+                </div>
             </form>
+
+           
         </div>
     </main>
 </body>
