--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/login.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <header>
@@ -46,7 +46,8 @@
                 </div>
         
                 <div class="criar_conta">
-                <a href="cadastro.html">Criar conta </a>
+                <p></p>
+                <button href="cadastro.html"> Cadastre-se </button>
                 </div>
             </form>
 
