mudando de butto para link

--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
         
                 <div class="criar_conta">
                 <p>Não possui conta?</p>
-                <button href="cadastro.html"> Cadastre-se </button>
+                <a href="cadastro.html"> Cadastre-se  </a>
                 </div>
             </form>
 
