botao submit e estilização basica da tela de cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -55,6 +55,8 @@
                 <label for="confirm_senha">Escolha uma senha</label>
                 <input type="text" id="confirm_senha" placeholder="digite sua senha" required>
 
+                <input type="button" value="submit">
+
             </form>
         </div>
     </main>
