Na pagina login, mudança no cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/cadastro.css">
+    <link rel="stylesheet" href="./style/cadastro.css">
     <title>Cadastro</title>
 </head>
 <body>
@@ -50,10 +50,10 @@
                 <input type="email"id="confirm_email" placeholder="digite seu email" required>
 
                 <label for="senha">Escolha uma senha</label>
-                <input type="text" id="senha" placeholder="digite sua senha" required>
+                <input type="password" id="senha" placeholder="digite sua senha" required>
 
-                <label for="confirm_senha">Escolha uma senha</label>
-                <input type="text" id="confirm_senha" placeholder="digite sua senha" required>
+                <label for="confirm_senha">Confirme sua senha</label>
+                <input type="password" id="confirm_senha" placeholder="digite sua senha" required>
 
                 <input type="button" value="submit">
 
