--- a/cadastro.html
+++ b/cadastro.html
@@ -42,6 +42,9 @@
 
                 <label for="telefone">Telefone</label>
                 <input type="number" id="telefone" placeholder=" (xx) xxxxx-xxxx">
+
+                <label for="cep">CEP</label>
+                <input type="number" id="cep" placeholder=" 00000-000">
                 
                 <label for="email">E-mail</label>
                 <input type="email"id="email" placeholder="digite seu email" required> 
