--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#">Sobre Mim</a></li>
                 </ul>
                 <div class="login-button">
-                    <button><a href="#"></a>Entrar</button>
+                    <button><a href="login.html"></a>Entrar</button>
                 </div>
             </nav>
         </header>
