conectando todas as telas

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="#topoDoSite">Início</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Sobre Mim</a></li>
+                    <li><a href="#especialidades">Serviços</a></li>
+                    <li><a href="#sobreMim">Sobre Mim</a></li>
                 </ul>
                 <div class="login-button">
-                    <button><a href="#"></a>Entrar</button>
+                    <button onclick="location.href='login.html'">Entrar</button>
                 </div>
             </nav>
         </header>
@@ -52,6 +52,7 @@
                     </div>
                 </div>
             </section>
+
             <section id="especialidades">
                 <div class="interface">
                     <h2>MEUS SERVIÇOS</h2>
@@ -62,21 +63,37 @@
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam, saepe
                                 repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
                         </div>
-                    <div class="flex">
-                        <div class="especialidadesBox">
-                            <i class="bi bi-clipboard-heart-fill"></i>
-                            <h3>Tratamentos Faciais</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam, saepe
-                                repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
+                        <div class="flex">
+                            <div class="especialidadesBox">
+                                <i class="bi bi-clipboard-heart-fill"></i>
+                                <h3>Tratamentos Faciais</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam,
+                                    saepe
+                                    repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
+                            </div>
+                            <div class="flex">
+                                <div class="especialidadesBox">
+                                    <i class="bi bi-clipboard-heart-fill"></i>
+                                    <h3>Tratamentos Faciais</h3>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam,
+                                        saepe
+                                        repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
+                                </div>
+                            </div>
                         </div>
-                    <div class="flex">
-                        <div class="especialidadesBox">
-                            <i class="bi bi-clipboard-heart-fill"></i>
-                            <h3>Tratamentos Faciais</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium vel totam, saepe
-                                repellendus similique dolorum repudiandae quisquam sit assumenda.</p>
-                        </div>
+            </section>
+
+            <section id="sobreMim">
+                <div class="interface">
+                    <h2>SOBRE MIM</h2>
+                    <div class="conteudoSobreMim">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia doloribus consequuntur
+                                voluptas odio similique ipsum vitae? Tenetur laboriosam aliquid sit deleniti commodi?
+                                Neque
+                                in quos sapiente necessitatibus assumenda dolore aut.</p>
+                        <div> <img src="img/LogoPNG.png" height="300"></div>
                     </div>
+
                 </div>
             </section>
         </main>
