--- a/login.html
+++ b/login.html
@@ -16,12 +16,12 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="index.html">Serviços</a></li>
+                <li><a href="index.html">Sobre Mim</a></li>
             </ul>
             <div class="login-button">
-                <button><a href="#"></a>Entrar</button>
+                <button onclick="location.href='login.html'">Entrar</button>
             </div>
         </nav>
     </header>
@@ -41,7 +41,7 @@
                     <a href="https://support.google.com/accounts/answer/7682439?hl=pt-BR">Esqueci a senha</a>
                     <div class="criar_conta">
                         <p>Não possui conta?</p>
-                        <a href="cadastro.html"> Cadastre-se  </a>
+                        <a href="cadastro.html">Cadastre-se</a>
                     </div>
                 </div>
                 <div class="centralizar_botao">
