--- a/cadastro.html
+++ b/cadastro.html
@@ -16,12 +16,12 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="index.html">Serviços</a></li>
+                <li><a href="index.html">Sobre Mim</a></li>
             </ul>
             <div class="login-button">
-                <button><a href="/login.html">Entrar</a></button>
+                <button onclick="location.href='login.html'">Entrar</button>
             </div>
         </nav>
     </header>
