--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daiane Carvalho</title>
     <link rel="icon" href="img/LogoPNG.png" type="image/x-icon">
+
+    <!-- Estilo da página -->
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/global.css">
+    <link rel="stylesheet" href="./style/header.css">
     <!-- BOOTSTRAP ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -98,7 +102,7 @@
             </section>
         </main>
     </div>
-    <script src="mobile-navbar.js"></script>
+    <script src="./js/mobile-navbar.js"></script>
 </body>
 
 </html>
