--- a/cadastro.html
+++ b/cadastro.html
@@ -31,7 +31,7 @@
            
 
                 <h2> Crie já sua conta!</h2>
-                <form action="PHP/processa_cadastro.php" class="cadastro_form">
+                <form action="" class="cadastro_form">
                     <label for="nome">Nome completo:</label>
                     <input type="text" id="nome" placeholder="digite seu nome" required>
                     
