--- a/login.html
+++ b/login.html
@@ -1,23 +1,11 @@
-
-<?php 
-session_start();
-
-
-if(isset($_SESSION['mensagem de erro'])){
-    echo"<p class='error-message'>". $_SESSION['mensagem_erro']."</p>";
-    unset($_SESSION['mensagem_erro']);
-}
-
-?>
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/login.css">
+    <link rel="stylesheet" href="./style/global.css">
+    <link rel="stylesheet" href="./style/header.css">
     <title>Login</title>
 </head>
 <body>
@@ -48,9 +36,9 @@ if(isset($_SESSION['mensagem de erro'])){
                 <div class="login_usuario_forms">
                     <form action="PHP/processa.php" method="post">
                         <label for="email"> E-mail</label>
-                        <input type="text" id ="email" name="email">
+                        <input type="text" id ="email">
                         <label for="senha"> Senha</label>
-                        <input type="password" id ="senha" name="email">
+                        <input type="password" id ="senha">
                     </form>
                 </div>
                 <div class="login_usuario_senhaEcadastro">
@@ -70,7 +58,5 @@ if(isset($_SESSION['mensagem de erro'])){
             </form>
         </div>
     </main>
-
-   
 </body>
 </html>
