--- a/cadastro.html
+++ b/cadastro.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- Estilo da página -->
-    <link rel="stylesheet" href="./style/login.css">
-    <link rel="stylesheet" href="./style/global.css">
-    <link rel="stylesheet" href="./style/header.css">
-    <link rel="stylesheet" href="style/cadastro.css">
+    <link rel="stylesheet" href="./style/cadastro.css">
     <title>Cadastro</title>
 </head>
 <body>
