--- a/calendario.html
+++ b/calendario.html
@@ -74,7 +74,7 @@
       <i class="fas fa-plus"></i>
     </button>
   </div>
-  <script src="./js/scriptCalen.js"></script>
+  <script src="scriptCalen.js"></script>
 </body>
 
 </html>
