--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daiane Carvalho</title>
     <link rel="icon" href="img/LogoPNG.png" type="image/x-icon">
+        <!-- CSS -->
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/global.css">
     <!-- BOOTSTRAP ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -30,7 +32,7 @@
                     <li><a href="#sobreMim">Sobre Mim</a></li>
                 </ul>
                 <div class="login-button">
-                    <button onclick="location.href='login.html'">Entrar</button>
+                   <a href="./login.php">Entrar</a>
                 </div>
             </nav>
         </header>
@@ -98,7 +100,7 @@
             </section>
         </main>
     </div>
-    <script src="mobile-navbar.js"></script>
+    <script src="js/mobile-navbar.js"></script>
 </body>
 
 </html>
